--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
 
-*{
-    color: darkslategrey;
+body{
     font-family: Arial, sans-serif;
-    font-size: 17px;
-    transition: 1s;
+    font-size: 1rem;    
 }
 h1{
     font-size: 30px;
@@ -14,15 +12,14 @@ h2{
     background-color: lightskyblue;
     border-radius: 5px;
 }
+p{
+    line-height: 1.5rem;
+}
 .text-center{
     text-align: center;
 }
 h1,h2{
     color: darkblue;
-}
-a:visited{
-    color: darkblue;
-    text-decoration: none;
 }
 a{
     text-decoration: none;
@@ -30,13 +27,22 @@ a{
 a:hover{
     text-decoration: underline;
 }
-h1 a, h1 a:visited{
-    color: white; 
+h1:hover, h2:hover{
+    cursor: pointer;    
 }
-h2 a:visited{
+h1 a{
+    color: white;
+}
+h2 a{
     color: lightskyblue;
 }
-h1 a:hover, h2 a:hover{
+h1:hover a{
+    color: darkblue;
+}
+h2:hover a{
+    color: darkblue;
+}
+h3 a{
     color: darkblue;
 }
 .text-center{
@@ -48,8 +54,20 @@ h1 a:hover, h2 a:hover{
     font-style: normal; 
 }
 p a{
-    color: darkblue;
+    color: darkblue;   
 }
 .iconify-inline{
     font-size: 1rem;
+    line-height: 1.5rem;
 }
+#social{
+    display: flex;
+    justify-content: center;  
+}
+#social a{
+    margin: 0px 3px;    
+}
+
+
+
+
